<resources>
    <string name="app_name">Andro-calc</string>
    <string name="clear_button_text">C</string>
    <string name="delete_button_text">DEL</string>
    <string name="dot_button_text">.</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="divideButtonText">/</string>
    <string name="multiplicationButtonText">*</string>
    <string name="additionButtonText">+</string>
    <string name="subtractionButtonText">-</string>
    <string name="equalButtonText">=</string>
    <string name="hold_to_copy">Удерживайте, чтобы скопировать</string>
    <string name="add_to_byffer">Скопировать результат в буфер?</string>
    <string name="copied">Скопировано</string>
</resources>
