<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg_color"
    android:orientation="vertical">

    <android.support.v7.widget.GridLayout
        android:id="@+id/input_and_output_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        app:columnCount="1"
        app:rowCount="2">

        <EditText
            android:id="@+id/user_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:cursorVisible="true"
            android:digits="0123456789\n"
            android:ems="10"
            android:focusable="true"
            android:fontFamily="sans-serif-light"
            android:inputType="number|textMultiLine"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:textAlignment="textEnd"
            android:textSize="40sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="3" />

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:ellipsize="middle"
            android:singleLine="true"
            android:textAlignment="textEnd"
            android:textColor="@color/gray_result_text_color"
            android:textSize="32sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />
    </android.support.v7.widget.GridLayout>

    <android.support.v7.widget.GridLayout
        android:id="@+id/buttons_grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/white"
        app:columnCount="4"
        app:orientation="horizontal">

        <Button
            android:id="@+id/clear_all_button"
            android:background="?attr/selectableItemBackground"
            android:cropToPadding="false"
            android:fontFamily="sans-serif-light"
            android:text="@string/clear_button_text"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:typeface="sans"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/delete_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackground"
            android:cropToPadding="true"
            android:fontFamily="sans-serif-light"
            android:scaleType="centerInside"
            android:text="@string/delete_button_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:typeface="sans"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/dot_input_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:text="@string/dot_button_text"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="32sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/division_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-light"
            android:text="@string/divideButtonText"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/seven_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-light"
            android:text="@string/seven"
            android:textSize="36sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/eight_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-light"
            android:text="@string/eight"
            android:textSize="36sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/nine_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-light"
            android:text="@string/nine"
            android:textSize="36sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/multiply_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-light"
            android:text="@string/multiplicationButtonText"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/four_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-light"
            android:text="@string/four"
            android:textSize="36sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/five_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-light"
            android:text="@string/five"
            android:textSize="36sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/six_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-light"
            android:text="@string/six"
            android:textSize="36sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/add_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-light"
            android:text="@string/additionButtonText"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/one_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-light"
            android:text="@string/one"
            android:textSize="36sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/two_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-light"
            android:text="@string/two"
            android:textSize="36sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/three_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-light"
            android:text="@string/three"
            android:textSize="36sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/substact_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-light"
            android:text="@string/subtractionButtonText"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/zero_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-light"
            android:text="@string/zero"
            android:textSize="36sp"
            app:layout_columnSpan="3"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/equal_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-light"
            android:text="@string/equalButtonText"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

    </android.support.v7.widget.GridLayout>

</LinearLayout>